# src-control

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md
.claude/skills/sc-cli-reference/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: annotate_sbom_glib.py
.github/workflows/: audit.yml  ci.yml  codeql.yml  fuzz.yml  sbom.yml  scorecard_analysis.yml
.superpowers/sdd/: task-2-report.md
apps/desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  api.ts  main.tsx  model.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  read_model.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: conflicts_cli.rs  everyday.rs  git_remote.rs  http_remote.rs  https_remote.rs  merge_exit.rs  partial_clone_safety.rs  provenance.rs  secret_lifecycle.rs  secret_stdin.rs  ssh_remote.rs  transcripts.rs  work.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  fsutil.rs  id.rs  lib.rs  object.rs  pack.rs  store.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: envelope.rs  error.rs  key.rs  lib.rs  private.rs  provider.rs  signing.rs
crates/gitio/: Cargo.toml
crates/gitio/src/: bridge.rs  export.rs  import.rs  lib.rs
crates/repo/: Cargo.toml
crates/repo/src/: cache.rs  conflicts.rs  diff3.rs  error.rs  gc.rs  git_marks.rs  http_transport.rs  ignore.rs  layout.rs  lib.rs  lock.rs  merge.rs  merge_state.rs  oplog.rs  pick_state.rs  private.rs  promisor.rs  protect.rs  protect_ops.rs  reachable.rs  rebase_state.rs  refs.rs  remote.rs  replay.rs  repo.rs  rewrap.rs  scanner.rs  scanner_patterns.rs  secrets.rs  serve_tokens.rs  signatures.rs  sparse.rs  stdio_transport.rs  sync.rs  textdiff.rs  tls_pins.rs  transcripts.rs  transport.rs  wire.rs  workspace.rs  (+2 more)
crates/tlsio/: Cargo.toml
crates/tlsio/src/: identity.rs  lib.rs  spki.rs  stream.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: lib.rs
demo/: run_demo.sh  run_git_remote_demo.sh  run_history_demo.sh  run_http_auth_demo.sh  run_http_remote_demo.sh  run_lifecycle_demo.sh  run_limits_demo.sh  run_merge_ergonomics_demo.sh  run_network_git_demo.sh  run_partial_clone_demo.sh  run_private_branch_demo.sh  run_protect_demo.sh  run_protected_merge_demo.sh  run_provenance_demo.sh  run_randomized_demo.sh  run_remote_demo.sh  run_repo_demo.sh  run_revoke_demo.sh  run_rewrap_demo.sh  run_sparse_demo.sh  run_ssh_remote_demo.sh  run_streaming_demo.sh  run_tls_demo.sh  run_transcript_demo.sh  run_work_demo.sh  run_ws_demo.sh
docs/: THREAT-MODEL.md
docs/adr/: 0001-use-rust.md  0002-content-addressed-blake3.md  0003-snapshot-and-tag-model.md  0004-crate-layout-and-dependency-rule.md  0005-in-ram-vfs-over-fuse.md  0006-memory-budget-and-eviction.md  0007-git-interop-via-gix.md  0008-committed-secrets-envelope-encryption.md  0009-key-management-and-authorization.md  0010-secret-registry-and-opaque-wrapped-dek.md  0011-persistent-store-and-working-tree.md  0012-three-way-merge.md  0013-remote-sync-model.md  0014-per-file-permissions-encrypted-paths.md  0015-packfiles-and-gc.md  0016-git-export.md  0017-secret-scanner.md  0018-git-as-a-remote.md  0019-secret-lifecycle.md  0020-six-crate-workspace.md  0021-durability-and-concurrency-hardening.md  0022-ssh-native-transport.md  0023-agent-workspaces.md  0024-history-editing.md  0025-protected-merge-and-replay.md  0026-revocation-tombstones.md  0027-bulk-rewrap-and-multi-escrow.md  0028-network-git-remotes.md  0029-history-editing-polish.md  0030-agent-sessions-and-automerge.md  0031-hardening-consolidation.md  0032-signed-commits-provenance.md  0033-merge-ergonomics.md  0034-sparse-checkouts.md  0035-streaming-transfer.md  0036-http-transport.md  0037-partial-clone.md  0038-agent-session-transcripts.md  0039-security-hardening-sweep.md  0040-sc-http-access-control.md  (+6 more)
docs/agents/: ACCESS.md  domain.md
docs/archive/: claude-md-phase-log-2026-07.md
docs/audit/: gap-analysis-source.md  ostif-best-practices-audit.md
docs/design/: phase-35-desktop-app.md
docs/research/: bounded-server-patterns.md  cryptography-audit-options.md  desktop-app-strategy.md  platform-strategy.md  tls-options-sc-http.md
docs/security/: data-handling.md  incident-response.md  opsec-baseline.md  security.txt  subscriptions.md  third-party-inventory.md  vulnerability-response.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-06-24-phase2-committed-secrets.md  2026-06-25-p4-merge.md  2026-06-25-persistent-store.md  2026-06-26-p5-secret-scanner.md  2026-06-26-p6-remotes.md  2026-06-29-p7-encrypted-paths.md  2026-06-30-p8-packfiles-gc.md  2026-07-01-p10-git-remote.md  2026-07-01-p9-git-export.md  2026-07-04-p11-secret-lifecycle.md  2026-07-05-ssh-native-transport.md  2026-07-06-p13-agent-workspaces.md  2026-07-06-p14-history-editing.md  2026-07-06-p15-protected-merge.md  2026-07-07-p16-revocation-tombstones.md  2026-07-07-p17-bulk-rewrap.md  2026-07-07-p18-network-git-remotes.md  2026-07-07-p19-history-polish.md  2026-07-07-p20-agent-sessions.md  2026-07-08-p21-hardening.md  2026-07-08-p22-provenance.md  2026-07-08-p23-merge-ergonomics.md  2026-07-08-p24-sparse-checkouts.md  2026-07-08-p25-streaming-transfer.md  2026-07-08-p26-http-transport.md  2026-07-09-p27-partial-clone.md  2026-07-09-p28-security-hardening-sweep.md  2026-07-09-p29-sc-http-access-control.md  2026-07-09-p30-session-transcripts.md  2026-07-10-p31-listener-limits.md  2026-07-10-p32-tls-sc-https.md  2026-07-10-p33-randomized-protected-encryption.md  2026-07-11-protect-demo-object-check.md
docs/superpowers/specs/: 2026-06-24-phase2-committed-secrets-design.md  2026-06-25-p4-merge-design.md  2026-06-25-persistent-store-design.md  2026-06-26-p5-secret-scanner-design.md  2026-06-26-p6-remotes-design.md  (+31 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: wire_decode.rs
(+6 files in other folders)
