[workspace]
resolver = "2"
members = ["crates/core", "crates/vfs", "crates/gitio", "crates/crypto", "crates/repo", "crates/cli", "crates/tlsio", "apps/desktop/src-tauri"]
exclude = ["vendor/glib-0.18.5-patched", "fuzz"]

# Tauri 2's Linux GTK3 stack is pinned to glib 0.18.5, whose VariantStrIter
# implementation contains RUSTSEC-2024-0429. This published-source copy carries
# the upstream two-line fix; remove it once Tauri moves to glib >= 0.20.
[patch.crates-io]
glib = { path = "vendor/glib-0.18.5-patched" }

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96.1"
license = "Apache-2.0"
authors = ["Toni Bergholm <toni@git-agentic.com>"]
description = "A next-gen version control system: snapshot-and-tag model, per-file permissions, native committed secrets, and in-memory clones."
repository = "https://github.com/git-agentic/src-control"
homepage = "https://github.com/git-agentic/src-control"
readme = "README.md"
keywords = ["version-control", "vcs", "secrets", "encryption", "agents"]
categories = ["development-tools", "command-line-utilities"]
# Pre-1.0, pre-audit crypto: nothing publishes to crates.io by accident. Each
# crate sets `publish.workspace = true` to inherit this.
publish = false

# Clippy lints intentionally allowed workspace-wide (each crate opts in with
# `[lints] workspace = true`). Kept deliberately small: two structural lints that
# are design choices, and one pedantic markdown lint that misfires on prose doc
# comments. Everything else clippy flags is fixed at the source. CI runs
# `clippy --all-targets -D warnings`, so this list is the single source of truth.
[workspace.lints.clippy]
type_complexity = "allow"       # deliberate: crypto wrap/protection map types
too_many_arguments = "allow"    # deliberate: commit/snapshot-assembly fns
doc_lazy_continuation = "allow" # pedantic markdown lint on prose doc comments

[profile.release]
lto = true
