[package]
name = "scl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sc"
path = "src/main.rs"

[dependencies]
scl-core = { path = "../core" }
scl-vfs = { path = "../vfs" }
scl-gitio = { path = "../gitio" }
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
