[package]
name = "scl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sc"
path = "src/main.rs"

[dependencies]
scl-core = { path = "../core" }
scl-vfs = { path = "../vfs" }
scl-gitio = { path = "../gitio" }
scl-crypto = { path = "../crypto" }
scl-repo = { path = "../repo" }
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
serde_json = "1.0.150"
