[package]
name = "scl-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
scl-core = { path = "../core" }
chacha20poly1305 = "0.10"
x25519-dalek = { version = "3", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = "1"
blake3 = "1.8.5"
hex = "0.4.3"
thiserror = "2.0.18"
ed25519-dalek = "3.0.0"

[dev-dependencies]
rand_chacha = "0.3"

[lints]
workspace = true
