[package]
name = "scl-repo"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
scl-core = { path = "../core" }
scl-vfs = { path = "../vfs" }
scl-crypto = { path = "../crypto" }
thiserror = "2.0.18"
regex = "1"
toml = "1.1"
serde = { version = "1", features = ["derive"] }
libc = "0.2.186"

[lints]
workspace = true
