[package]
name = "scl-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Tauri desktop adapter for src-control"

[lib]
name = "scl_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "scl-desktop"
path = "src/main.rs"

[dependencies]
scl-core = { path = "../../../crates/core" }
scl-crypto = { version = "0.1.0", path = "../../../crates/crypto" }
scl-repo = { path = "../../../crates/repo" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
toml = "1.1.2"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[lints]
workspace = true
